* re-add some logging